# Lite3_Model_Control

./: .gitignore  README.md
Lite3_Basic_Sim/lite3_basic_sim_pkg/lite3_motion_sdk/include/: parse_cmd.h  send_to_robot.h  udp_server.hpp
Lite3_Basic_Sim/lite3_basic_sim_pkg/lite3_motion_sim/config/: lite3_rviz.rviz
Lite3_Basic_Sim/lite3_basic_sim_pkg/lite3_motion_sim/launch/: lite3_rviz_display.launch
Lite3_Basic_Sim/lite3_basic_sim_pkg/lite3_motion_sim/meshes/Lite3/urdf/: Lite3.urdf
Lite3_Basic_Sim/lite3_basic_sim_pkg/lite3_motion_sim/src/: sim_fun.cpp
Lite3_Basic_Sim/lite3_basic_sim_pkg/lite3_motion_sim/xacro/lite3/: robot.xacro
Lite3_CANN_Sim/: README.md
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/: .gitignore
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/contact_plugin_pkg/include/: ContactPlugin.hh
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/examples/: CMakeLists.txt
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/examples/example_lite3_real/: example_lite3_real.cpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/gazebo_model_spawn/: package.xml
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/: CMakeLists.txt
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/config/: qr_config.h  user_parameters.yaml
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/config/lite3/: stance_leg_controller.yaml
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/config/lite3_sim/: robot.yaml
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/include/quadruped/action/: qr_action.h
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/include/quadruped/controllers/: qr_desired_state_command.hpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/include/quadruped/estimators/: qr_moving_window_filter.hpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/include/quadruped/robots/: qr_robot_lite3.h  qr_robot_lite3_sim.h  qr_robot_sim.h
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/include/quadruped/utils/: qr_tools.h
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/src/action/: qr_action.cpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/src/controllers/: qr_swing_leg_controller.cpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/src/controllers/mpc/: qr_mpc_stance_leg_controller.cpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/src/estimators/: qr_robot_estimator.cpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/src/fsm/: qr_control_fsm.cpp  qr_fsm_state_locomotion.cpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/src/gait/: qr_openloop_gait_generator.cpp  qr_walk_gait_generator.cpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/src/planner/: qr_foothold_planner.cpp
Lite3_CANN_Sim/Lite3_CANN_Sim/model-control_modify/src/quadruped/src/robots/: qr_robot.cpp
basic_level_sim/: Simulation_Manual.md  lib_install.sh
basic_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sdk/: CMakeLists.txt  main.cpp
basic_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sdk/include/: parse_cmd.h
basic_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sdk/src/: parse_cmd.cpp  send_to_robot.cpp
basic_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sim/: CMakeLists.txt  package.xml
basic_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sim/config/: robot_torque_controllers_lite3.yaml
basic_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sim/gazebo_model/xacro/lite3/: body.xacro
basic_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sim/meshes/Lite3/urdf/: Lite3.urdf
high_level_sim/: Simulation_Manual.md  Tips For Running This Project.md  Tips_For_Running_This_Project.md  lib_install.sh
high_level_sim/src/contact_plugin_pkg/: CMakeLists.txt  package.xml
high_level_sim/src/contact_plugin_pkg/src/: ContactPlugin.cc
high_level_sim/src/examples/: package.xml
high_level_sim/src/examples/example_keyboard/: example_keyboard.cpp
high_level_sim/src/examples/example_lite3_sim/: example_lite3_sim.cpp
high_level_sim/src/gazebo_model_spawn/: CMakeLists.txt
high_level_sim/src/gazebo_model_spawn/launch/: model_spawn.launch
high_level_sim/src/gazebo_model_spawn/src/: gazebo_model_spawn.cpp
high_level_sim/src/gazebo_model_spawn/worlds/: earth.world
high_level_sim/src/lite3_basic_sim_pkg/: README.md
high_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sdk/include/: robot_types.h  udp_socket.hpp
high_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sdk/src/: parse_cmd.cpp
high_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sim/config/: robot_position_controllers_lite3.yaml
high_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sim/include/: sim_fun.h
high_level_sim/src/lite3_basic_sim_pkg/lite3_motion_sim/launch/: lite3_gazebo_simulation_control_cann.launch
high_level_sim/src/quadruped/: README.md  package.xml
high_level_sim/src/quadruped/config/lite3/: lite3_robot.yaml  openloop_gait_generator.yaml
high_level_sim/src/quadruped/src/controllers/: qr_desired_state_command.cpp
high_level_sim/src/quadruped/src/estimators/: qr_robot_velocity_estimator.cpp
high_level_sim/src/quadruped/src/exec/: qr_robot_runner.cpp
high_level_sim/src/quadruped/src/fsm/: qr_fsm_state_standup.cpp
high_level_sim/src/quadruped/src/planner/: qr_foot_stepper.cpp
high_level_sim/src/quadruped/src/robots/: qr_robot_lite3.cpp  qr_robot_lite3_sim.cpp  qr_robot_sim.cpp
high_level_sim/src/quadruped/src/ros/: qr_control2gazebo_msg.cpp
high_level_sim/src/robot_description/lite2_description/: CMakeLists.txt
high_level_sim/src/robot_description/lite2_description/launch/: lite2_gazebo.launch
high_level_sim/src/robot_description/lite2_description/urdf/: robot.urdf
high_level_sim/src/robot_description/lite2_description/xacro/: gazebo.xacro
high_level_sim/src/robot_description/lite3_description/xacro/: gazebo.xacro  robot.xacro
(+23 files in other folders)
